--- a/config.ini
+++ b/config.ini
@@ -5,3 +5,4 @@ get_cookie = 1
 [Test]
 main_url = https://work.weixin.qq.com/wework_admin/frame#index
 login_url = https://work.weixin.qq.com/wework_admin/loginpage_wx?
+index_url = https://work.weixin.qq.com/
