--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
 addopts = -sv
 markers =
-    contacts: Test contacts adding
+    contacts: Test add contacts
+    department: Test add department
